Fix overflow scroll on cart and menu pages

--- a/src/styles/components/CartItem.css
+++ b/src/styles/components/CartItem.css
@@ -4,7 +4,8 @@
   grid-template-columns: 0.3fr 1fr;
   grid-template-rows: 1fr;
   width: 100%;
-  height: 15%;
+  max-height: 10vh;
+  min-height: 10vh;
   margin: 10px;
   border: 1px solid rgb(109, 114, 104);
   border-radius: 12.5px;
@@ -58,7 +59,8 @@
 @media (max-width: 830px) {
   .cart-item-container {
     grid-template-columns: 1fr 1fr;
-    height: fit-content;
+    min-height: fit-content;
+    max-height: 30vh;
   }
   .cart-item-image-wrapper {
     display: flex;
