--- a/src/styles/pages/Cart.css
+++ b/src/styles/pages/Cart.css
@@ -2,25 +2,34 @@
 #cart-container {
   display: grid;
   grid-template-columns: 0.5fr 2fr 0.5fr;
-  grid-template-rows: repeat(3, 0.3fr) 2fr;
-  height: 80vh;
+  grid-template-rows: repeat(3, auto) 3fr;
+  height: fit-content;
   font-family: "Roboto", Arial, Helvetica, sans-serif;
 }
 #cart-label-wrapper {
   grid-column: 2;
   display: flex;
   justify-content: center;
+  margin-bottom: 1rem;
 }
 #cart-items-wrapper {
   grid-column: 2;
   grid-row: 2/5;
   border-radius: 25px;
-  border: 1px solid black;
   background-color: white;
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
-  overflow-y: scroll;
+}
+
+#menu-items-wrapper {
+  grid-row: 4;
+  grid-column: 2;
+  background-color: white;
+  border-radius: 25px;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
 }
 #cart-total-wrapper {
   display: flex;
